--- a/ArtistHunt/Podfile
+++ b/ArtistHunt/Podfile
@@ -8,7 +8,8 @@ target 'ArtistHunt' do
   # Pods for ArtistHunt
   pod 'SkyFloatingLabelTextField', '~> 3.0'
   pod 'Alamofire', '~> 5.0.0.beta.1'
-
+  pod 'RxSwift',    '~> 4.0'
+  pod 'RxCocoa',    '~> 4.0'
 
   target 'ArtistHuntTests' do
     inherit! :search_paths
